hphp/test/slow/php7_backported/scalar-types/scalar_reserved2.php.expectf

Fatal error: Cannot use `int` as class name as it is reserved in %s/scalar_reserved2.php on line 3
